# cc-switchboard

./: .gitignore  LICENSE  README.md  com.local.cc-switchboard.plist  pyproject.toml  server.py
static/: index.html
